RESOLVED FIXED22103
REGRESSION (r37126-r37300): Changing fonts in preferences does not immediately update WebViews
https://bugs.webkit.org/show_bug.cgi?id=22103
Summary REGRESSION (r37126-r37300): Changing fonts in preferences does not immediatel...
mitz
Reported 2008-11-06 09:40:47 PST
Changes to the standard font family and size are not reflected in all open WebViews until style recalc is forced. To reproduce: open Safari Preferences, go to Appearance, and change the standard font size. Notice how the font size in open windows does not change until you reorder a window to the front.
Attachments
patch (5.23 KB, patch)
2008-11-10 07:22 PST, Darin Adler
aroben: review+
mitz
Comment 1 2008-11-06 09:41:06 PST
Darin Adler
Comment 2 2008-11-09 16:32:42 PST
Hyatt somehow broke this when he changed FrameView::invalidateRect to call Chrome::repaint which calls ChromeClient::repaint, which does nothing at all when _usesDocumentViews is true! I'm not sure which part of that is wrong. Frame::setNeedsReapplyStyles calls FrameView::invalidate which calls the set of functions above.
Darin Adler
Comment 3 2008-11-10 07:22:22 PST
Adam Roben (:aroben)
Comment 4 2008-11-10 08:26:33 PST
Comment on attachment 25015 [details] patch r=me
Adam Roben (:aroben)
Comment 5 2008-11-10 08:27:04 PST
I wonder if we can use LayoutTestController's new ability to modify preferences to make a regression test for this?
Darin Adler
Comment 6 2008-11-10 09:01:47 PST
(In reply to comment #5) > I wonder if we can use LayoutTestController's new ability to modify preferences > to make a regression test for this? Not in any obvious way. The symptom goes away when you do any layout or repainting, and I don't think DRT has any ability to test that sort of problem.
Note You need to log in before you can comment on or make changes to this bug.